--- a/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser_add.html
@@ -8,42 +8,6 @@
                 <div class="layui-form-item layui-row">
                     <input name="id" type="hidden"/>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">乐观锁<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="version" name="version" placeholder="请输入乐观锁" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">创建人<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="createdBy" name="createdBy" placeholder="请输入创建人" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">创建时间<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="createdTime" name="createdTime" placeholder="请输入创建时间" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">更新人<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="updatedBy" name="updatedBy" placeholder="请输入更新人" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">更新时间<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="updatedTime" name="updatedTime" placeholder="请输入更新时间" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">删除标识<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="deleted" name="deleted" placeholder="请输入删除标识" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">手机号<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
                             <input id="mobile" name="mobile" placeholder="请输入手机号" type="text" class="layui-input" lay-verify="required" required/>
@@ -56,63 +20,50 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">年龄<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">年龄</label>
                         <div class="layui-input-block">
-                            <input id="age" name="age" placeholder="请输入年龄" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="age" name="age" placeholder="请输入年龄" type="text" class="layui-input"/>
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">身高<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">身高</label>
                         <div class="layui-input-block">
-                            <input id="height" name="height" placeholder="请输入身高" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="height" name="height" placeholder="请输入身高" type="text" class="layui-input" />
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">性别 0-男;1-女<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">性别</label>
                         <div class="layui-input-block">
-                            <input id="sex" name="sex" placeholder="请输入性别 0-男;1-女" type="text" class="layui-input" lay-verify="required" required/>
+ 							<input type="radio" name="sex" value="0" title="男" checked />
+                        	<input type="radio" name="sex" value="1" title="女" />
+                        </div>
+                    </div>
+                   	<div class="layui-form-item">
+                   		<label class="layui-form-label">头像</label>
+                   		<div class="layui-input-block">
+                   			<input id="avatar" name="avatar" type="hidden" class="layui-input"/>
+                   			<button type="button" class="layui-btn layui-btn-sm" id="avatarBtn"><i class="layui-icon"></i>选择图片</button>
+                   			<div class="layui-upload-list">
+                   				<img class="layui-upload-img" id="img1" width="92px" height="92px">
+                   			</div>
+                   		</div>
+                   	</div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">信用分</label>
+                        <div class="layui-input-block">
+                            <input id="score" name="score" placeholder="请输入信用分" type="text" class="layui-input" />
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">头像<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">收到金币</label>
                         <div class="layui-input-block">
-                            <input id="avatar" name="avatar" placeholder="请输入头像" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="balance" name="balance" placeholder="请输入金币余额（可提现）" type="text" class="layui-input" />
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">状态 0-正常；1-禁用<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">充值金币</label>
                         <div class="layui-input-block">
-                            <input id="status" name="status" placeholder="请输入状态 0-正常；1-禁用" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">信用分<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="score" name="score" placeholder="请输入信用分" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">金币余额（可提现）<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="balance" name="balance" placeholder="请输入金币余额（可提现）" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">冻结余额（不可提现）<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="freeze" name="freeze" placeholder="请输入冻结余额（不可提现）" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">我的邀请码<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="inviteCode" name="inviteCode" placeholder="请输入我的邀请码" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">邀请人ID<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="parentId" name="parentId" placeholder="请输入邀请人ID" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="freeze" name="freeze" placeholder="请输入冻结余额（不可提现）" type="text" class="layui-input" />
                         </div>
                     </div>
                 </div>
