--- a/guns-vip-main/src/main/webapp/pages/note/qxUserProduct/qxUserProduct_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxUserProduct/qxUserProduct_add.html
@@ -62,9 +62,9 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">收货地址<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">收货地址ID<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="address" name="address" placeholder="请输入收货地址" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="addressId" name="addressId" placeholder="请输入收货地址ID" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                 </div>
