--- a/guns-vip-main/src/main/webapp/pages/note/qxAlert/qxAlert.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxAlert/qxAlert.html
@@ -29,6 +29,8 @@
 </div>
 
 <script type="text/html" id="tableBar">
+	<a class="layui-btn layui-btn-xs" lay-event="invite">查看约单</a>
+	<a class="layui-btn layui-btn-xs" lay-event="handleAlert">处理报警</a>
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">删除</a>
 </script>
