--- a/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser.html
@@ -32,6 +32,7 @@
 </div>
 
 <script type="text/html" id="tableBar">
+    <a class="layui-btn layui-btn-xs" lay-event="chargeUser">充值</a>
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">删除</a>
 </script>
