--- a/guns-vip-main/src/main/webapp/pages/note/qxWithdrawLog/qxWithdrawLog.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxWithdrawLog/qxWithdrawLog.html
@@ -29,6 +29,7 @@
 </div>
 
 <script type="text/html" id="tableBar">
+	<a class="layui-btn layui-btn-xs {{d.status==1 ? 'layui-btn-disabled' : ''}}" lay-event="{{d.status==1 ? '' : 'handleWithdraw'}}">{{d.status==1 ? "已提现" : "处理提现"}}</a>
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">删除</a>
 </script>
